# generateQRCodeToPng

./: CMakeLists.txt  GenerateQrCode.cpp  GenerateQrCode.h  README.md  main.cpp
